objects/ortoo_qra__Assignment_Configuration__c.object
<CustomObject>
    <description>Assignment Configuration</description>
    <fields>
        <fullName>ortoo_qra__Assignment_Method_Basis__c</fullName>
        <description>Assignment method basis  (No Longer Used)</description>
        <label>Assignment Method Basis (No Longer Used)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created Date</fullName>
                </value>
                <value>
                    <fullName>Last Modified Date</fullName>
                </value>
                <value>
                    <fullName>Custom Sequence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Method__c</fullName>
        <description>Assignment method (No Longer Used)</description>
        <label>Assignment Method (No Longer Used)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FIFO / Ascending</fullName>
                    <default>true</default>
                    <label>FIFO / Ascending</label>
                </value>
                <value>
                    <fullName>LIFO / Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Mode__c</fullName>
        <description>Assignment mode (No Longer Used)</description>
        <label>Assignment Mode  (No Longer Used)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Round Robin</fullName>
                </value>
                <value>
                    <fullName>Load Balanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Sequence__c</fullName>
        <description>Assignment sequence number (No Longer Used)</description>
        <label>Assignment Sequence  (No Longer Used)</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assumed_Queries_Used_Per_Commit__c</fullName>
        <description>(No Longer Used)</description>
        <inlineHelpText>(No Longer Used)</inlineHelpText>
        <label>Assumed Queries Per (No Longer Used)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Current_Job_Completed_Time__c</fullName>
        <label>Current Job Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Current_Job_Completion_Status__c</fullName>
        <label>Current Job Completion Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Current_Job_Error_Message__c</fullName>
        <label>Current Job Error Message</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Current_Job_ID__c</fullName>
        <label>Current Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Current_Job_Number_of_Records_Processed__c</fullName>
        <label>Current Job Number of Records Processed </label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Current_Job_Ran_in_Safe_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Job Ran in Safe Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Current_Job_Scheduled_Time__c</fullName>
        <label>Current Job Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Error_Email_Address__c</fullName>
        <label>Error Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Fallback_Job_One__c</fullName>
        <description>Fallback_Job1_Id (No Longer Used)</description>
        <label>Fallback Job One (No Longer Used)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Fallback_Job_Two__c</fullName>
        <description>Fallback_Job2_Id (No Longer Used)</description>
        <label>Fallback Job Two (No Longer Used)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Completed_Job_Id__c</fullName>
        <description>Last completed job id</description>
        <label>Last Completed Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Exit_Status__c</fullName>
        <label>Last Exit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Early</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Job_Completed_Time__c</fullName>
        <label>Last Job Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Job_Completion_Status__c</fullName>
        <label>Last Job Completion Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Job_Error_Message__c</fullName>
        <label>Last Job Error Message</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Job_Number_of_Records_Processed__c</fullName>
        <label>Last Job Number of Records Processed </label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Job_Ran_in_Safe_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Job Ran in Safe Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Job_Scheduled_time__c</fullName>
        <label>Last Job Scheduled time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Normal_Assignment_Start_Date__c</fullName>
        <label>Last Normal Assignment Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Processed_Groups__c</fullName>
        <label>Last Processed Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Run_End_Time__c</fullName>
        <label>Last Run End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Run_Start_Time__c</fullName>
        <label>Last Run Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Scheduled_Assignment_Date__c</fullName>
        <description>Last scheduled assignment date</description>
        <label>Last Scheduled Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Scheduled_Job_Id__c</fullName>
        <description>Last scheduled job id</description>
        <label>Last Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Scheduler_Run_Stats__c</fullName>
        <label>Last Scheduler Run Stats</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Max_Records_Per_Commit__c</fullName>
        <inlineHelpText>The max number of records (Leads, Cases, etc.) to commit in one batch. A higher number lead to higher performance but may hit governor limits, e.g. triggers runs extra queries. A lower number can prevent hitting governor limits but will process slowly.</inlineHelpText>
        <label>Max Records Per Commit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Max_Records_Per_Job__c</fullName>
        <label>Max Records Per Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Next_Job_Number_of_Records_to_Process__c</fullName>
        <label>Next Job Number of Records to Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Next_Job_Scheduled_Time__c</fullName>
        <formula>IF(ortoo_qra__Enabled__c, ortoo_qra__Current_Job_Scheduled_Time__c  +  (ortoo_qra__Schedule_Frequency_Minutes__c/1440), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Job Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Round_Robin_Quota_Period__c</fullName>
        <description>Round robin quota period (No Longer Used)</description>
        <label>Round Robin Quota Period (No Longer Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__SM_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SM Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__SM_Highest_Num_Records_Per_Job_Success__c</fullName>
        <label>SM Highest Num Records Per Job Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__SM_Lowest_Num_Records_Per_Job_Failed__c</fullName>
        <label>SM Lowest Num Records Per Job Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Schedule_Frequency_Minutes__c</fullName>
        <description>Assignment schedule frequency in minutes</description>
        <label>Schedule Frequency Minutes</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Assignment Configuration</label>
    <nameField>
        <label>Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>